[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/adamcavendish/token-toxication"

[workspace.dependencies]
anyhow = "1"
aioduct = { version = "0.2.0", features = ["tokio", "rustls", "rustls-ring"] }
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures-util = "0.3"
hex = "0.4"
http-body-util = "0.1"
instant-acme = { version = "0.8.5", default-features = false, features = ["rcgen", "ring", "time", "x509-parser"] }
rand = "0.9"
mime_guess = "2"
rcgen = "0.14"
rusqlite = { version = "0.37", features = ["bundled"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.5.0", features = ["chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
x509-parser = "0.18"
