[package]
name = "token-toxication-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
aioduct.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
hex.workspace = true
rand.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
uuid.workspace = true
