[package]
name = "token-toxication-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aioduct.workspace = true
axum.workspace = true
axum-server.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
hex.workspace = true
http-body-util.workspace = true
instant-acme.workspace = true
mime_guess.workspace = true
rand.workspace = true
rusqlite.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
uuid.workspace = true
url.workspace = true
x509-parser.workspace = true

[dev-dependencies]
rcgen.workspace = true
